--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	</head>
 	<body>
 		<div id="app">
+			<input type="text" placeholder="Ubu narsa yozin" />
+			<button>Add</button>
 			<ul></ul>
 		</div>
 		<script type="module" src="/src/main.js"></script>
